<resources>
    <string name="app_name">Luca Expenses</string>

    <!-- Activity names -->
    <string name="title_activity_welcome">Expense reports</string>
    <string name="title_activity_settings">Settings</string>

    <string name="login_text">Login</string>
    <string name="logout_text">Logout</string>
    <string name="settings_text">Settings</string>

    <!-- Offline Activity -->
    <string name="receipt_thumbnail">Receipt thumbnail</string>

    <!-- Settings Activity -->
    <string name="save_to_album_pref">Save images to album</string>
    <string name="wifi_only_pref">Upload using Wifi only</string>
    <string name="disable_ocr_pref">Disable receipt scan</string>
    <string name="disable_ocr_summary">Don\'t parse receipt data automatically</string>

    <string name="images_category">Images</string>
    <string name="network_category">Network</string>
    <string name="advanced_category">Advanced</string>
    <string name="debug_category">Debug</string>

    <string name="facebook_application_id" translatable="false">335970566774032</string>

    <string name="version">Version</string>
    <string name="email">Email</string>
    <string name="corrupt_data_notice">Corrupt data</string>
    <string name="waiting_to_upload">Waiting for a connection</string>
    <string name="uploading">Uploading receipt</string>
    <string name="interpreting">Interpreting receipt</string>
    <string name="name_not_found">Name not found</string>
    <string name="uploading_external_receipt">Upload receipt</string>
    <string name="title_activity_receipt">Edit receipt</string>
    <string name="title_activity_receipt_finalized">View receipt</string>
    <string name="title_activity_expense_report">Expense report</string>
    <string name="action_settings">Settings</string>
    <string name="receipts">Receipts</string>
    <string name="details">Report details</string>
    <string name="add_to_new">Add to new report</string>
    <string name="report_name_hint">Title</string>
    <string name="report_project_code_hint">Project code</string>
    <string name="report_billable_hint">Is billable?</string>
    <string name="report_travel_hint">Is travel?</string>
    <string name="affirm_action">Ok</string>
    <string name="cancel_action">Cancel</string>
    <string name="report_departure_at">Departure date</string>
    <string name="report_arrival_at">Arrival date</string>
    <string name="report_destination_hint">Destination</string>
    <string name="report_source_hint">Departure from</string>
    <string name="report_comment_hint">Purpose</string>
    <string name="report_departure_at_hint">Departure at</string>
    <string name="report_arrival_at_hint">Arrival date</string>
    <string name="section_format">Section format</string>
    <string name="receipt_merchant_name_hint">Merchant</string>
    <string name="receipt_amount_hint">Amount</string>
    <string name="receipt_currency_hint">Currency</string>
    <string name="receipt_used_date_hint">Used date</string>
    <string name="receipt_category_hint">Category</string>
    <string name="receipt_reimbursable_hint">Reimbursable?</string>
    <string name="receipt_comment_hint">Comment</string>
    <string name="empty_expense_report_notice">You can add a receipt to this expense report by hitting the camera button below.</string>
    <string name="no_expense_reports_notice">Thank you for choosing Luca Expesnes! To get started, add a new expense report with the button below.</string>
    <string name="create_expense_report">New expense report</string>
    <string name="new_report">New report</string>
    <string name="expense_report_created_notice">Created new expense report</string>
    <string name="submit_expense_report">Finalize and submit</string>
    <string name="submitted_report_notice">Submitted expense report</string>
    <string name="finalized_and_submitted">Finalized and submitted</string>
    <string name="submit_report_confirmation_message">Do you really want to finalize and submit this report?</string>
    <string name="submit_report_confirmation_title">All set?</string>
    <string name="action_delete">Delete</string>
    <string name="expense_report_menu_title">Expense report</string>
    <string name="action_open">Open</string>
    <string name="expense_report_deleted_notice">Deleted expense report</string>
    <string name="delete_report_confirmation_title">Delete report?</string>
    <string name="delete_report_confirmation_message">Do you really want to delete this report?</string>
    <string name="receipt_deleted_notice">Deleted receipt</string>
    <string name="delete_receipt_confirmation_message">Do you really want to delete this receipt?</string>
    <string name="delete_receipt_confirmation_title">Delete receipt?</string>
    <string name="delete_finalized_report_notice">Can\'t delete a finalized expense report</string>
    <string name="deleted_finalized_receipt_notice">Can\'t delete receipt on finalized expense report</string>
    <string name="login_please_connect_prompt">Couldn\'t sign in. Please connect to the Internet.</string>
    <string name="photo_preview">photo preview</string>
    <string name="receipt_image">Receipt image</string>
    <string name="expense_report_finalized">Submitted</string>
    <string name="needs_permissions_notice">We need camera and storage access to save your receipts</string>
    <string name="email_needs_verification_notice">We\'ve sent an email to %1$s.</string>
    <string name="resend">Resend email</string>
    <string name="refreshing">Refreshing ...</string>
    <string name="email_verified">Email verified</string>
    <string name="refresh">Refresh</string>
    <string name="verify_your_email">Verify your email</string>
    <string name="follow_the_link">Please follow the link we\'ve sent you</string>
    <string name="title_activity_mail_inbox">Email inbox</string>
    <string name="add_to_expense_report">Add to expense report ...</string>
    <string name="empty_mail_inbox">Your inbox is empty. Receipts sent to import@bilag.io from %1$s will show up here.</string>
    <string name="import_mailaddress">import@bilag.io</string>
    <string name="receipt_expense_report_hint">Expense report</string>
    <string name="no_category">None</string>
    <string name="receipt_activity_title">Edit receipt</string>
    <string name="action_save_to_album">Save to album</string>
    <string name="enable_emergency_save_summary">Transfer receipt pictures to album</string>
    <string name="enable_emergency_save_pref">Enable emergency save</string>
</resources>
