<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="pref_screen">

    <PreferenceCategory android:title="@string/images_category">

        <SwitchPreference
            android:defaultValue="false"
            android:key="save_to_album_pref"
            android:title="@string/save_to_album_pref" />
    </PreferenceCategory>
    <PreferenceCategory
        android:id="@+id/advanced_category"
        android:key="advanced_cat"
        android:title="@string/advanced_category">

        <ListPreference
            android:defaultValue="Production"
            android:entries="@array/available_environments"
            android:entryValues="@array/available_environments"
            android:key="environment_pref"
            android:summary="Select server/storage environment"
            android:title="Environment" />

        <Preference
            android:key="version_number"
            android:summary=""
            android:title="@string/version" />

        <Preference
            android:key="user_email"
            android:summary=""
            android:title="@string/email" />
    </PreferenceCategory>
    <PreferenceCategory
        android:id="@+id/debug_category"
        android:key="debug_cat"
        android:title="@string/debug_category">
        <Preference
            android:key="uid"
            android:summary=""
            android:title="UID" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="disable_ocr_pref"
            android:summary="@string/disable_ocr_summary"
            android:title="@string/disable_ocr_pref" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="wifi_only_pref"
            android:title="@string/wifi_only_pref" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="enable_emergency_save_pref"
            android:summary="@string/enable_emergency_save_summary"
            android:title="@string/enable_emergency_save_pref" />
    </PreferenceCategory>
</PreferenceScreen>