<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="io.lucalabs.expenses.activities.WaitForVerificationActivity">

    <TextView
        android:id="@+id/verify_email_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_your_email"
        android:textSize="@dimen/tw__permission_title_text_size" />

    <TextView
        android:id="@+id/verify_email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/follow_the_link"
        android:textSize="@dimen/ampm_label_size" />

    <Button
        android:id="@+id/refresh_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh"
        android:drawableLeft="@drawable/ic_refresh"
        android:layout_marginTop="48dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="48dp">

        <Button
            android:id="@+id/resend_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_action" />
    </LinearLayout>
</LinearLayout>
